Fix footerButton on mobile screen

--- a/styles/components/_footer.sass
+++ b/styles/components/_footer.sass
@@ -79,11 +79,11 @@ footer
       letter-spacing: 2px
       margin-bottom: 90px
       position: relative
-
+      width: 215px
+      display: flex
       +tablet
         margin: 0 auto
         display: block
-        width: 210px
 
   .numie-logo
     display: none
