--- a/styles/components/_footerButton.sass
+++ b/styles/components/_footerButton.sass
@@ -1,21 +1,25 @@
 .footer-button
   cursor: pointer
   position: relative
-  min-height: 20px
+  min-height: 40px
   padding: 0 !important
   color: white !important
   background: transparent !important
   box-shadow: none !important
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
   &:before, &:after
     position: absolute
     content: ' '
-    top: -9px
+    top: 0
     width: 0%
-    height: 200%
+    height: 100%
     background-color: rgba(255, 255, 255, 0.1)
   &:before
     width: 24%
-    left: -5px
+    left: 0px
     transition: width 0.4s cubic-bezier(0.22, 0.61, 0.36, 1)
     transition-delay: 0.5s
   &:after
@@ -28,9 +32,9 @@
     width: 0%
     transition: width 0.01s cubic-bezier(0.22, 0.61, 0.36, 1)
   &:hover:after
-    width: calc(100% + 5px)
+    width: 100%
     right: 0
-    left: -5px
+    left: 0
     background-color: rgba(255, 255, 255, 1)
     transition: width 0.4s cubic-bezier(0.22, 0.61, 0.36, 1)
 
@@ -38,8 +42,10 @@
     position: absolute
     transition: color .5s cubic-bezier(0.22, 0.61, 0.36, 1)
     transition-delay: 0s
-    width: 100% !important
+    width: calc(100% + 5px)!important
     left: 0 !important
+    z-index: 1
+    padding: 10px 0px
+    padding-right: 5px
     &:hover
-      z-index: 1
       color: $numie-red
